--- a/tuumes/phase2/src/main/resources/static/account/messages/send_message.html
+++ b/tuumes/phase2/src/main/resources/static/account/messages/send_message.html
@@ -53,7 +53,7 @@
             </div>
 
             <div class="form-group">
-                <input class="form-control" id="email" name="email" placeholder="Email" required disabled></input>
+                <input class="form-control" id="recipientEmail" name="recipientEmail" placeholder="Email" required disabled></input>
             </div>
 
             <div class="form-group">
@@ -80,7 +80,7 @@
 <script>
     if (window.location.hash) {
         let hash = window.location.hash.substring(1);
-        $("#email").val(hash);
+        $("#recipientEmail").val(hash);
         $("#recipient_selector").hide();
     }
 
@@ -102,8 +102,9 @@
         });
 
         data['content'] = $("#message").val();
-        data['recipientEmail'] = $("#recipient").val();
         data['userId'] = USER_ID;
+
+        console.log(data);
 
         $.postJSON("/messages/send", data, function(result) {
             console.log(result);
