--- a/tuumes/phase2/src/main/resources/static/account/messages/view_messages.html
+++ b/tuumes/phase2/src/main/resources/static/account/messages/view_messages.html
@@ -133,6 +133,7 @@
                 });
             }
             $("#messages").html(to_print);
+            getArchived();
         });
     }
 
@@ -145,9 +146,8 @@
                 result.data.forEach(msg => {
                     to_print += `
                     <div class="container white text-center mt-4 pt-4">
-                        <h3>From: ${msg.sender}</h3>
-                        <p>${msg.recipient}</p>
-                        <p class="mb-3">${msg.messageContent}</p>
+                        <h3>From: ${msg.sender.name}</h3>
+                        <p class="mb-3">${msg.content}</p>
                         <button class="btn btn-default" onclick="markUnarchive('${msg.id}')">
                             <i class="fa fa-archive fa-lg"></i> &thinsp; Unarchive 
                         </button>
