--- a/tuumes/phase2/src/main/resources/static/account/organizer/modify_event.html
+++ b/tuumes/phase2/src/main/resources/static/account/organizer/modify_event.html
@@ -104,7 +104,7 @@
             eventId: eventId
         }, function(result) {
             if (result.valid) {
-                toastr.success("You've registered to this event.");
+                toastr.success("The speaker has been added to the event successfully");
             } else {
                 switch (result.message) {
                     case "FULL_EVENT":
