--- a/tuumes/phase2/src/main/resources/static/account/messages/send_message.html
+++ b/tuumes/phase2/src/main/resources/static/account/messages/send_message.html
@@ -85,7 +85,7 @@
     }
 
     function switchContact() {
-        $("#email").val($("#recipient").val());
+        $("#recipientEmail").val($("#recipient").val());
     }
 
     $("#message_form").submit(function(e) {
