--- a/tuumes/phase2/src/main/resources/static/account/organizer/modify_event.html
+++ b/tuumes/phase2/src/main/resources/static/account/organizer/modify_event.html
@@ -34,7 +34,7 @@
     <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="menu.html">Go back</a>
+                <a class="nav-link" href="view_events.html">Go back</a>
             </li>
         </ul>
     </div>
