--- a/tuumes/phase2/src/main/resources/static/account/events/view_events.html
+++ b/tuumes/phase2/src/main/resources/static/account/events/view_events.html
@@ -68,8 +68,8 @@
                 let print_delete = ``;
                 let pre_text = ``;
                 event.speakerData.forEach(speaker => {
-                    print_speakers = `
-                        <a class="mt-2 mb-2" href="../messages/send_message.html#${speaker.email}">Contact: ${speaker.name}</a>
+                    print_speakers += `
+                        <a class="mt-2 mb-2" href="../messages/send_message.html#${speaker.email}">Contact: ${speaker.name}</a><br />
                     `;
                 });
                 if (event.vipOnlyEvent) {
