--- a/tuumes/phase2/src/main/resources/static/account/organizer/menu.html
+++ b/tuumes/phase2/src/main/resources/static/account/organizer/menu.html
@@ -73,6 +73,16 @@
                     </a>
                 </div>
             </div>
+            <div class="col-2">
+                <div class="card">
+                    <a href="send_message.html">
+                        <div class="card-content text-center">
+                            <h1 class="bigicon"><i class="fas fa-envelope"></i></h1>
+                            <h4 class="mb-3">Message</h4>
+                        </div>
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
 </body>
