--- a/tuumes/phase2/src/main/resources/static/account/messages/view_messages.html
+++ b/tuumes/phase2/src/main/resources/static/account/messages/view_messages.html
@@ -15,7 +15,7 @@
             width: 5%;
             display: block;
             margin-left: auto;
-            margin-right: 5;
+            margin-right: 5px;
         }
     </style>
 </head>
