--- a/tuumes/phase2/src/main/resources/static/account/events/view_events.html
+++ b/tuumes/phase2/src/main/resources/static/account/events/view_events.html
@@ -78,6 +78,7 @@
                 let userCount = event.userIds.length;
                 to_print += `
                 <div class="container white text-center mt-4 pt-4">
+                    ${pre_text}
                     <h3>${event.name}</h3>
                     <p class="mt-2 mb-2">${event.description}</p>
                     <p class="mt-2 mb-2">
